src/main/resources/styles/main-narrow.css
/*CSS Property	Values	Default	Comments
-fx-font	<font>	inherit	shorthand property for font-size, font-family, font-weight and font-style
-fx-font-family	<font-family>	inherit
-fx-font-size	<font-size>	inherit
-fx-font-style	<font-style>	inherit
-fx-font-weight	<font-weight>	inherit*/

* {
    -fx-font-family: 'Menlo', 'Lucida Console', 'Courier', monospace;
    -fx-font-size: 12;
    -fx-smooth: false;
}

.fieldeditortoppane {
    -fx-border-radius: 0px;
    -fx-border-color: #d8d8d8;
    -fx-border-insets: 0px;
    -fx-border-style: solid;
    -fx-border-width: 0px;
    -fx-padding: 25 25 25 25;
    -fx-alignment: center;
    -fx-background-color: #ffffff;
}

#fieldEditorPane {
    -fx-border-radius: 1px;
    -fx-border-color: #d8d8d8;
    -fx-border-insets: 0px;
    -fx-border-style: solid;
    -fx-border-width: 1px;
    -fx-padding: 25 25 25 25;
    -fx-alignment: center;
    -fx-background-color: #ffffff;
}

#fieldEditorTopPane {
    -fx-background-color: #f4f4f4; //#ececec;
}

.fieldeditorscrollpane {
    -fx-background-color: #f4f4f4; //#ececec;
    -fx-border-radius: 0px;
    -fx-border-color: #d8d8d8;
    -fx-border-insets: 0px;
    -fx-border-style: solid;
    -fx-border-width: 0px;
    -fx-padding: 0 0 0 0;
    -fx-alignment: center;
    -fx-fit-to-width: true;
    -fx-fit-to-height: true;
    -fx-pannable: false;
    -fx-hbar-policy: as-needed; //	[ never | always | as-needed ]	1
    -fx-vbar-policy: as-needed; //	[ never | always | as-needed ]	1
}

.begrouptoppane {
    -fx-padding: 25 25 25 25;
    -fx-background-color: #f4f4f4; //#ececec;
}

.begroupscrollpane {
    -fx-background-color: #f4f4f4; //#ececec;
    -fx-border-radius: 0px;
    -fx-border-color: #d8d8d8;
    -fx-border-insets: 0px;
    -fx-border-style: solid;
    -fx-border-width: 0px;
    -fx-padding: 0 0 0 0;
    -fx-alignment: center;
    -fx-fit-to-width: true;
    -fx-fit-to-height: true;
    -fx-pannable: false;
    -fx-hbar-policy: as-needed; //	[ never | always | as-needed ]	1
    -fx-vbar-policy: as-needed; //	[ never | always | as-needed ]	1
}

.begroupstackpane {
    -fx-background-color: #ffffff;
    -fx-border-radius: 1px;
    -fx-border-style: solid;
    -fx-border-width: 1px;
    -fx-border-color: #d8d8d8;
    -fx-font-family: PTMono;
    -fx-font-size: 14px;
    -fx-font-weight: normal;
    -fx-font-style: normal;
    -fx-font-stretch: normal;
    -fx-color: #4b4b4b;
    -fx-fit-to-width: true;
    -fx-fit-to-height: true;
}

.protocolgrid {
    -fx-background-color: #ffffff;
    -fx-border-width: 0px;
    -fx-padding: 1.99px;                 /* narrowing */
}

.titled-pane {
    -fx-border-radius: 1px;
    -fx-border-color: #d8d8d8;
    -fx-border-insets: 0px;
    -fx-border-style: solid;
    -fx-border-width: 1px;
}

.titled-pane .content {
    -fx-border-width: 0px;
}

.titled-pane .title {
    -fx-background-color: #f4f4f4;
    -fx-font-size: 14px;
    -fx-font-weight: bold;
    -fx-font-style: normal;
    -fx-font-stretch: normal;
    -fx-color: #4b4b4b;
}

.invalid-protocol .title {
    -fx-background-color: #dbbaba;
}

.titled-pane .arrow-button {
    -fx-font-family: System;
    -fx-font-size: 14px;
    -fx-font-weight: normal;
    -fx-font-style: normal;
    -fx-font-stretch: normal;
}

#append-layer-combobox {
    -fx-min-width: 25em;
}

#append-protocol-button {
    -fx-min-width: 5em;
}

.append-protocol .title {
    -fx-background-color: WHITE;
    -fx-color: WHITE;
    -fx-font-weight: normal;
    -fx-font-style: italic;
}

.ignored-field {
    -fx-text-fill: grey;
}

.stackpane {
    -fx-border-radius: 0px;
    -fx-border-color: #d8d8d8;
    -fx-border-insets: 0px;
    -fx-border-style: solid;
    -fx-border-width: 0px;
    -fx-padding: 0 0 0 0;
    -fx-alignment: center;
}

.binary-field {
    -fx-text-box-border: transparent;
    -fx-focus-color: transparent;
    -fx-faint-focus-color: transparent;
    -fx-border-radius: 10;
    -fx-background-radius: 10;
}

.binary-field.selected {
    -fx-background-color: #33adff;
}

.protocol-row {
    -fx-background-color: #f4f4f4;
    -fx-pref-height: 30px;
    -fx-padding: 8 0 7 0px;
}

.field-row {
    -fx-background-color: #ffffff;
    -fx-padding: 0 0 0 40px;              /* narrowing */
    -fx-fill-height: true;
    -fx-fill-width: true;
}

.field-row-raw {
    -fx-background-color: #ffffff;
    -fx-pref-height: 220px;
    -fx-padding: 0 0 1 40px;
}

.field-row-raw-head {
    -fx-background-color: #ffffff;
    -fx-pref-height: 50px;
    -fx-min-height: 50px;
    -fx-padding: 2 0 1 40px;
}

.field-row-raw-value {
    -fx-pref-width: 340px;
    -fx-pref-height: 220px;
    -fx-min-width: 340px;
    -fx-min-height: 220px;
    -fx-border-radius: 1px;
    -fx-border-color: #d8d8d8;
    -fx-border-insets: 0px;
    -fx-border-style: solid;
    -fx-border-width: 1px;
    -fx-padding: 0 0 0 0;
}

.field-row-raw-button {
    -fx-padding: 5 5 5 5;
}

.protocol-name {
    -fx-fill: #000000;
    -fx-font-style: oblique;
    -fx-font-size: 14px;
}

.control {
    -fx-pref-width: 180px;
}

.hyperlink .text{
    -fx-underline: false;
}

.text-area {
    -fx-pref-width: 360px;
    -fx-pref-height: 200px;
}

.title-pane {
    -fx-fit-to-height: true;
    -fx-min-width: 30em;
    -fx-pref-width: -fx-min-width;
    -fx-max-width: -fx-min-width;
}

.field-row.value-pane {
    -fx-fit-to-height: true;
}

.editable-label:editable {
    -fx-background-color: #33adff;
}

/*
.scroll-pane > .viewport {
    -fx-background-color: transparent;
}

.scroll-pane {
    -fx-background-color: white;
}
*/

.field-label-info {
    -fx-pref-width: 150px;
    -fx-font-family: Monospaced;
}

.field-label-name {
    -fx-pref-width: 250px;
}

.field-label-name .indented {
    -fx-text-fill: grey;
}
.bitflag-label-name .indented {
    -fx-text-fill: grey;
    -fx-padding: 0,0,0,10;
}

.field-value-default {
    -fx-text-fill: grey;
}

.field-value-set {
    -fx-text-fill: blue;
}

.field-error {
    -fx-focus-color: red;
}

/* For payload editor control */
.payloadhbox {
    -fx-min-height: -1;
    -fx-pref-height: -1;
    -fx-max-height: 400px;
    -fx-min-width: 300px;
    -fx-pref-width: 300px;
    -fx-spacing: 7px;
    -fx-padding: 0px 0px 2px 0px;
}

.payloadvbox {
    -fx-spacing: 7px;
    -fx-padding: 0px 0px 2px 0px;
}

.payloadchoice {
    -fx-min-height: 10px;
    -fx-pref-height: 30px;
    -fx-pref-width: 150px;
    -fx-min-width: 150px;
}

.payloadbutton {
    -fx-min-height: 30px;
    -fx-pref-height: 30px;
    -fx-min-width: 5em;
    -fx-pref-width: -1;
}

.payloadlabel {
    -fx-min-height: 30px;
    -fx-pref-height: 30px;
    -fx-min-width: 100px;
    -fx-pref-width: 100px;
}

.payloadeditorgrid {
    /*-fx-min-height: -Infinity;
    -fx-max-height: -Infinity;
    -fx-max-width: -Infinity;*/
}

.payloadeditortextarea {
    -fx-pref-height: 200px;
    -fx-min-height: 200px;
    -fx-pref-width: 300px;
    -fx-min-width: 300px;
}

.payloadeditortextfield {
    -fx-pref-width: 300px;
    -fx-min-width: 100px;
}

.payloadeditorlabel {
    -fx-font-family: inherit;
    -fx-pref-height: 200px;
    -fx-min-height: 200px;
    -fx-pref-width: 300px;
    -fx-min-width: 300px;
}

/* Narrowing */
.titled-pane .label,
.titled-pane .button,
.titled-pane .text-field,
.titled-pane .choice-box,
.titled-pane .combo-box,
.titled-pane .list-cell {
    -fx-padding: 1px 1px 1px 1px;
    -fx-pref-height: 1.51em;
    -fx-min-height: 1.51em;
    -fx-max-height: 1.51em;
    -fx-background-radius: 0px, 0px, 0px, 0px;
}

.titled-pane .text-field,
.titled-pane .choice-box,
.titled-pane .combo-box,
.titled-pane .list-cell {
    -fx-min-width: 15em;
    -fx-pref-width: -1; /*-fx-min-width;*/
    -fx-max-width: -1; /*-fx-min-width;*/
}

.titled-pane .layer-type-selector {
    -fx-min-width: 15em;
    -fx-pref-width: -1; /*-fx-min-width;*/
    -fx-max-width: 15em; /*-fx-min-width;*/
}

ProtocolField,
.titled-pane .label {
    -fx-min-width: 4.4em;
    -fx-pref-width: 28.8em; /*-fx-min-width;*/
    -fx-max-width: 28.8em; /*-fx-min-width;*/
}

.titled-pane .choice-box,
.titled-pane .combo-box
 {
    /* modena.css:
    -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-inner-border, -fx-body-color;*/
    -fx-background-color: #ececec, #ececec, #f4f4f4, #ececec;
    -fx-background-insets: 0 0 0 0, 0, 0, 0;
}


.titled-pane .text-field {
    /*-fx-border-insets: 0px;
    -fx-border-style: solid;
    -fx-background-color: red, white, #f4f4f4, white;*/
    -fx-border-width: 0px;
    -fx-padding: 1px 1px 1px 3px;
}

/* Restore after narrowing */
.payloadvbox .choice-box .label,
.payloadvbox .combo-box .label{
    -fx-padding: 1px 7.3px 1px 7.3px;
}

/* Restore after narrowing */
#payloadEditorHboxValue .label {
    -fx-min-width: 1em;
    -fx-pref-width: -1;
    -fx-max-width: -1;
}

.field-value-default-raw,
.field-value-set-raw {
    -fx-min-height: 10em;
    -fx-pref-height: -fx-min-height;
    -fx-max-height: -fx-min-height;
    -fx-min-width: 25em;
    -fx-pref-width: -fx-min-width;
    -fx-max-width: -fx-min-width;
    -fx-alignment: top-left;
    -fx-text-overrun: center-ellipsis;
    -fx-ellipsis-string: ".....";
}

.bitflag  {
    -fx-background-radius: 0, 0, 0, 0;
    -fx-padding: 0;
}

.bitflag .arrow-button .arrow {
    visibility: false;
}
.bitflag,
.bitflag > .list-cell,
.bitflag > .list-cell .text {
    /*-fx-fill: grey;*/
    -fx-background-color: white white white white; /*transparent, transparent, transparent, transparent;*/
}

